feat: 카테고리 레퍼런스 응답을 categoryGroup 그룹 Map으로 변경