@@ -19,7 +19,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
-import org.apache.commons.lang3.tuple.Pair;
+import java.util.stream.Collectors;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.test.util.ReflectionTestUtils;
@@ -75,11 +75,11 @@ public class InMemoryAlcoholQueryRepository implements AlcoholQueryRepository {
   }
 
   @Override
-  public List<Pair<String, String>> findAllCategoryPairs() {
+  public List<CategoryItem> findAllCategoryItems() {
     return alcohols.values().stream()
-        .map(a -> Pair.of(a.getKorCategory(), a.getEngCategory()))
+        .map(a -> new CategoryItem(a.getKorCategory(), a.getEngCategory(), a.getCategoryGroup()))
         .distinct()
-        .toList();
+        .collect(Collectors.toList());
   }
 
   @Override
